--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon server"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -17,6 +18,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "json": "^9.0.6",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
